fixed some layout issues and misspell

--- a/src/components/Picture/picture.module.scss
+++ b/src/components/Picture/picture.module.scss
@@ -4,8 +4,12 @@
 	justify-content: center;
 	margin: 20px auto;
 }
+$breakpoint-tablet: 768px;
 .image {
-	width: 60%;
+	width: 90%;
+	@media (min-width: $breakpoint-tablet) {
+		width: 60%;
+	}
   // box-shadow: 0 0 1px rgba(0, 0, 0, 0.1), 0 0 1px rgba(0, 0, 0, 0.06),
   //   0 2px 2px rgba(0, 0, 0, 0.06), 0 4px 4px rgba(0, 0, 0, 0.06),
 	//   0 8px 8px rgba(0, 0, 0, 0.06), 0 16px 16px rgba(0, 0, 0, 0.06);
