--- a/src/pages/about.module.scss
+++ b/src/pages/about.module.scss
@@ -1,9 +1,22 @@
+$breakpoint-tablet: 768px;
 .content{
   margin: 0 auto;
   padding: 0px 0.5rem;
   padding-top: 0;
-  display: flex;
-  height:80%;
-  flex-flow: column nowrap;
-  justify-content: space-between;
+	display: flex;
+	width: 100%;
+	height: 80%;
+	flex-flow: column nowrap;
+	justify-content: flex-start;
+	@media (min-width: $breakpoint-tablet) {
+		flex-flow: row nowrap;
+		justify-content: flex-start;
+	}
+}
+.content__text{
+	width: 100%;
+	@media (min-width: $breakpoint-tablet) {
+		margin-left: 50px;
+		
+	}
 }
